Support for writing per-segment stats to RatZarr output (#83)
* Initial sketch of RatZarr support

* Inital sketch now passing basic tests

* Use 64-bit Zarr columns. Remove unnecessary methods

* Test contents of Zarr stats columns

* Fix docstring for OpenRatContainer

* Docstrings update

* Spatial stats to Zarr file

* RatZarr support into spatial+RIOS stats routine

* Include a basic test of RIOS-based stats

* Extend RatZarr support to RIOS-based versions. Tidying other bits

* Only need 1 readWorker for testing

* Consistent behaviour around create/update of explicit outFile

* More generic column check function. Check on RIOS-based outFile

* Consistent behaviour around create/update of explicit outFile in spatial+RIOS

* Full tests of spatial+RIOS

* Remove hard-wired print of RIOS timings, instead return a TiledStatsResult object, consistent with non-RIOS versions

* Move RIOS-based tests to after base non-RIOS tests completed

* Explicit message when tests for RIOS or Zarr are skipped

* Fix docstrings re: outFile

* Install rios, zarr & ratzarr into Github test environment

* Fix incomplete docstring

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Install dependencies
       shell: bash -l {0}
       run: |
-        conda install flake8 numba scikit-learn gdal libgdal-kea
+        conda install flake8 numba scikit-learn gdal libgdal-kea zarr rios
+        pip install git+https://github.com/ubarsc/ratzarr.git
     - name: Lint with flake8
       shell: bash -l {0}
       run: |
